# klirr

./: .release.toml  .tarpaulin.toml  Cargo.toml  HOW_IT_WORKS.md  README.md  _typos.toml  justfile  makefile
.github/: test.yml
.github/workflows/: release.yml  test.yml
crates/cli/: Cargo.toml  README.md
crates/cli/migration/: v0.md  v1.md
crates/cli/src/: commands.rs  dispatch_command.rs  error.rs  init_logging.rs  main.rs  migration_guides.rs  run.rs  run_invoice.rs
crates/cli/src/input/: get_input.rs  mod.rs  target_items.rs  target_month.rs  target_period.rs  time_off_input.rs  time_off_unit_input.rs  tui.rs
crates/cli/src/input/get_input/: get_input.rs  mod.rs
crates/cli/src/input/tui/: build_data.rs  build_email_settings.rs  mod.rs
crates/core/: Cargo.toml
crates/core-invoice/: Cargo.toml
crates/core-invoice/layouts/: aioo.typ
crates/core-invoice/src/: lib.rs
crates/core-invoice/src/logic/: calendar_logic.rs  create_invoice_pdf.rs  create_pdf.rs  file_path_logic.rs  mod.rs  save_pdf_location_to_tmp_file.rs  send_email.rs
crates/core-invoice/src/logic/command/: command.rs  data_selector.rs  email_settings_selector.rs
crates/core-invoice/src/logic/encryption/: aes_gcm_256.rs  aes_gcm_sealed_box.rs  encrypted_app_password.rs  encryption_key.rs  pb_hkdf.rs  salt.rs
crates/core-invoice/src/logic/prepare_data/: bank_holidays.rs  exchange_rates.rs  fetch_exchange_rate_with_reqwest.rs  get_exchange_rates.rs  mod.rs  prepare_input_data.rs
crates/core-invoice/src/logic/read_write_data/: get_localization.rs  read_data_from_disk.rs
crates/core-invoice/src/models/: date.rs  day.rs  decimal.rs  deserialize_contents_of_ron.rs  error.rs  exchange_rates.rs  font_identifier.rs  font_weight.rs  invoice_info_full.rs  invoice_number.rs  invoiced_items.rs  item.rs  item_converted_into_target_currency.rs  layout.rs  mod.rs  month.rs  named_pdf.rs  output_path.rs  pdf.rs  unit_price.rs  valid_input.rs  year.rs  year_and_month.rs
crates/core-invoice/src/models/data/: data.rs  data_from_disk_with_items_of_kind.rs
crates/core-invoice/src/models/l10n/: client_info.rs  content.rs  invoice_info.rs  language.rs  line_items.rs  localization.rs  swedish.rs  vendor_info.rs
crates/core-invoice/src/models/line_items/: line_items_flat.rs  line_items_without_cost.rs
crates/core-invoice/src/models/snapshots/: klirr_core_invoice__models__decimal__tests__display.snap  klirr_core_invoice__models__decimal__tests__serde.snap  (+1 more)
crates/core-invoice/tests/: typst_conversion.rs
crates/core-invoice/tests/snapshots/: typst_conversion__data_expenses_to_typst.snap  typst_conversion__data_services_to_typst.snap  typst_conversion__data_services_with_payment_method_overrides_to_typst.snap  typst_conversion__data_services_with_vat_to_typst.snap  typst_conversion__l10n_english_to_typst.snap  typst_conversion__l18n_english_to_typst.snap
crates/core-pdf/: Cargo.toml
crates/core-pdf/src/: font_identifier.rs  lib.rs  pdf.rs  typst.rs
crates/core/src/: lib.rs
crates/core/src/logic/: calendar_logic.rs  command.rs  create_pdf.rs  mod.rs  send_email.rs  serde_to_typst.rs
crates/core/src/models/: cost.rs  date.rs  day.rs  decimal.rs  error.rs  exchange_rates.rs  invoice_info_full.rs  invoice_number.rs  invoiced_items.rs  item.rs  item_converted_into_target_currency.rs  month.rs  pdf.rs  quantity.rs  unit_price.rs  valid_input.rs  year_and_month.rs
crates/foundation/: Cargo.toml
crates/foundation/layout/: foundation.typ  test.typ
crates/foundation/src/: bank_holidays.rs  calendar_logic.rs  document.rs  exchange_rates.rs  fs_utils.rs  functional.rs  lib.rs  ron.rs  runtime.rs  sample.rs  typst_layouts.rs
crates/foundation/src/encryption/: aes_gcm_256.rs  encrypted_app_password.rs  error.rs  mod.rs  salt.rs  samples.rs
crates/foundation/src/models/: bank_holidays.rs  cadence.rs  cost.rs  country_code.rs  currency.rs  date.rs  day.rs  decimal.rs  due_days.rs  font_identifier.rs  font_weight.rs  granularity.rs  hex_color.rs  mod.rs  model_error.rs  month.rs  month_half.rs  named_pdf.rs  output_path.rs  path_and_name.rs  pdf.rs  quantity.rs  rate.rs  relative_time.rs  unit_price.rs  vat.rs  year.rs
crates/foundation/src/models/snapshots/: klirr_foundation__models__decimal__tests__display.snap  klirr_foundation__models__decimal__tests__serde.snap  klirr_foundation__models__month_half__tests__display_sample.snap  klirr_foundation__models__month_half__tests__display_sample_other.snap  klirr_foundation__models__unit_price__tests__serde.snap  klirr_foundation__models__vat__tests__serde.snap
crates/foundation/src/traits/: font_requiring.rs  mod.rs  typst.rs
crates/logic/: Cargo.toml
crates/logic/src/: calendar_logic.rs  create_pdf.rs  lib.rs  save_pdf_location_to_tmp_file.rs  serde_to_typst.rs
crates/logic/src/models/: date.rs  day.rs  deserialize_contents_of_ron.rs  error.rs  exchange_rates.rs  invoice_info_full.rs  invoice_number.rs  item.rs  mod.rs  month.rs  unit_price.rs  year_and_month.rs
crates/logic/src/prepare_data/: get_exchange_rates.rs
crates/logic/src/read_data/: read_data_from_disk.rs
crates/render/: Cargo.toml
crates/render-invoice/: Cargo.toml
crates/render-invoice/src/: lib.rs  render.rs  render_test_helpers.rs
crates/render-pdf/: Cargo.toml
crates/render-pdf/src/: compare_images.rs  error.rs  lib.rs  module.rs  render.rs
crates/render-pdf/src/typst_context/: context.rs  environment.rs  mod.rs
crates/render-typst/: Cargo.toml
crates/render-typst/src/: compare_images.rs  error.rs  lib.rs  render.rs  render_test_helpers.rs
crates/render-typst/src/typst_context/: content.rs  context.rs  environment.rs  source_extensions.rs
crates/render/src/: invoice.typ  lib.rs  main.typ  render.rs  render_test_helpers.rs
crates/render/src/typst_context/: context.rs  environment.rs
docs/migration/: v1.md
(+152 files in other folders)
