[package]
name = "klirr-foundation"
rust-version = "1.85.1"
version = "0.2.12"
edition = "2024"
description = "Shared primitives for all crates of Klirr."
license = "MIT"
documentation = "https://docs.rs/klirr-foundation"
repository = "https://github.com/Sajjon/klirr"

[features]
default = []
crypto = [
    "dep:aes-gcm",
    "dep:hex",
    "dep:hkdf",
    "dep:rand",
    "dep:secrecy",
    "dep:sha2",
    "dep:zeroize",
]
exchange-rates = ["dep:reqwest"]

[dependencies]
aes-gcm = { workspace = true, optional = true }
bon.workspace = true
chrono = { workspace = true, features = ["serde"] }
derive_more.workspace = true
dirs-next.workspace = true
getset.workspace = true
hex = { workspace = true, optional = true }
hkdf = { workspace = true, optional = true }
indoc = "2.0.6"
indexmap.workspace = true
log.workspace = true
rand = { workspace = true, optional = true }
reqwest = { version = "0.12.19", default-features = false, features = [
    "blocking",
    "json",
    "rustls-tls",
], optional = true }
ron.workspace = true
rust_decimal.workspace = true
secrecy = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
serde_with = { version = "3.9", features = ["hex"] }
sha2 = { workspace = true, optional = true }
strum.workspace = true
thiserror.workspace = true
zeroize = { workspace = true, optional = true }

[dev-dependencies]
insta.workspace = true
pretty_assertions.workspace = true
tempfile.workspace = true
test-log.workspace = true
ttf-parser = "0.25.1"
