[package]
name = "klirr-render-invoice"
rust-version = "1.85.1"
version = "0.2.1"
edition = "2024"
description = "Zero-maintenance and smart FOSS generating beautiful invoices for services and expenses."
license = "MIT"
documentation = "https://docs.rs/klirr-render-invoice"
repository = "https://github.com/Sajjon/klirr"

[dependencies]
# Internal dependencies
klirr-core-invoice.workspace = true
klirr-render-pdf.workspace = true

# External dependencies
bon.workspace = true
chrono.workspace = true
derive_more.workspace = true
log.workspace = true
serde_json.workspace = true
getset.workspace = true
dirs-next.workspace = true

[dev-dependencies]
image-compare = "0.4.2"
image = { version = "0.25", default-features = false, features = ["png"] }
tempfile.workspace = true
test-log.workspace = true
