[package]
name = "klirr-render-typst"
rust-version = "1.85.1"
version = "0.2.2"
edition = "2024"
description = "Typst specific PDF rendering tools."
license = "MIT"
documentation = "https://docs.rs/klirr-render-typst"
repository = "https://github.com/Sajjon/klirr"

[dependencies]
# Internal dependencies
klirr-foundation.workspace = true
klirr-render-pdf.workspace = true

# External dependencies
bon.workspace = true
chrono.workspace = true
derive_more.workspace = true
log.workspace = true
serde_json.workspace = true
getset.workspace = true
dirs-next.workspace = true

[dev-dependencies]
klirr-core-invoice.workspace = true
tempfile.workspace = true
test-log.workspace = true
