[package]
name = "klirr-render-typst"
rust-version = "1.85.1"
version = "0.2.10"
edition = "2024"
description = "Typst specific PDF rendering tools."
license = "MIT"
documentation = "https://docs.rs/klirr-render-typst"
repository = "https://github.com/Sajjon/klirr"

[dependencies]
# Internal dependencies
klirr-foundation.workspace = true

# External dependencies
bon.workspace = true
chrono.workspace = true
derive_more.workspace = true
dirs-next.workspace = true
getset.workspace = true
indexmap.workspace = true
log.workspace = true
serde_json.workspace = true
thiserror.workspace = true
typst = "0.13.1"
typst-kit = "0.13.1"
typst-pdf = "0.13.1"


[dev-dependencies]
klirr-core-invoice.workspace = true
tempfile.workspace = true
test-log.workspace = true
image = { version = "0.25", default-features = false, features = ["png"] }
image-compare = "0.4.2"
